Appointment service: Doctor part fully complete.